consistent-hash.yml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: nginx-vs
spec:
  hosts:
    - nginx-service
  http:
    - route:
        - destination:
            host: nginx-service
            subset: all

---

kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: nginx-dr
spec:
  host: nginx-service
  trafficPolicy:
    loadBalancer:
        consistentHash:
          httpHeaderName: "x-user"
  subsets:
    - name: all
      labels:
        app: nginx
