gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway-k3s
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: http2
    hosts:
    - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:   
  name: nginx-vs
spec:
  hosts:
  - "*"
  gateways:
  - ingress-gateway-k3s
  http:
    - match:
      - uri:
          prefix: "/b"
      route:
      - destination:
          host: nginx-service
          subset: B
    - match:
      - uri:
          prefix: "/"
      route:
      - destination:
          host: nginx-service
          subset: A    
    - route:
        - destination:
            host: nginx-service
            subset: A
          weight: 80
        - destination:
            host: nginx-service
            subset: B
          weight: 20
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
  host: nginx-service
  subsets:
    - name: A
      labels:
        version: A
    - name: B
      labels:
        version: B
